[gd_scene load_steps=16 format=3 uid="uid://hfo627la4h2f"]

[ext_resource type="Script" path="res://character_selector/character_creator.gd" id="1_avgvk"]
[ext_resource type="Texture2D" uid="uid://djv1byov750hr" path="res://assets/sprites/player/body/body1.png" id="1_vwstd"]
[ext_resource type="Script" path="res://character_selector/body.gd" id="2_wh28j"]
[ext_resource type="Texture2D" uid="uid://d2uberku7qua3" path="res://assets/sprites/player/eyeL/eyeL1.png" id="2_wlu12"]
[ext_resource type="Texture2D" uid="uid://bd7v8cahvi5x7" path="res://assets/sprites/player/eyeR/eyeR1.png" id="3_rdtel"]
[ext_resource type="Texture2D" uid="uid://dcbu0jpu2xg0v" path="res://assets/sprites/player/shirt/shirt1.png" id="4_4g14j"]
[ext_resource type="Script" path="res://character_selector/eyeL.gd" id="4_qrus5"]
[ext_resource type="Texture2D" uid="uid://8pskuo8pv8sn" path="res://assets/sprites/player/pants/pants1.png" id="5_871fs"]
[ext_resource type="Script" path="res://character_selector/eyeR.gd" id="6_t3m20"]
[ext_resource type="Texture2D" uid="uid://dw0tmireiw4tw" path="res://assets/sprites/player/shoes/shoes1.png" id="6_w2jp3"]
[ext_resource type="Texture2D" uid="uid://ddvpe40uedl77" path="res://assets/sprites/player/hair/hair1.png" id="7_qcj3j"]
[ext_resource type="Script" path="res://character_selector/shirt.gd" id="8_uts3o"]
[ext_resource type="Script" path="res://character_selector/pants.gd" id="10_vafiy"]
[ext_resource type="Script" path="res://character_selector/shoes.gd" id="12_5vkql"]
[ext_resource type="Script" path="res://character_selector/hair.gd" id="14_thed0"]

[node name="CharacterCreator" type="Node2D"]
script = ExtResource("1_avgvk")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.777853, 0.786649, 0.976023, 1)

[node name="CreatorScreen" type="CanvasLayer" parent="."]

[node name="Menu" type="ColorRect" parent="CreatorScreen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -501.0
offset_top = -448.0
offset_right = 499.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0.713726, 1, 1)

[node name="Skeleton" type="Node2D" parent="CreatorScreen/Menu"]
position = Vector2(509, -95)
scale = Vector2(5, 5)

[node name="body" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("2_wh28j")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/body"]
texture = ExtResource("1_vwstd")
hframes = 16

[node name="eyeL" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("4_qrus5")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/eyeL"]
texture = ExtResource("2_wlu12")
hframes = 16

[node name="eyeR" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("6_t3m20")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/eyeR"]
texture = ExtResource("3_rdtel")
hframes = 16

[node name="shirt" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("8_uts3o")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/shirt"]
texture = ExtResource("4_4g14j")
hframes = 16

[node name="pants" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("10_vafiy")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/pants"]
texture = ExtResource("5_871fs")
hframes = 16

[node name="shoes" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("12_5vkql")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/shoes"]
texture = ExtResource("6_w2jp3")
hframes = 16

[node name="hair" type="Node2D" parent="CreatorScreen/Menu/Skeleton"]
script = ExtResource("14_thed0")

[node name="Sprite2D" type="Sprite2D" parent="CreatorScreen/Menu/Skeleton/hair"]
texture = ExtResource("7_qcj3j")
hframes = 16

[node name="Details" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 740.0
offset_bottom = 60.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/Details"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "NAME"

[node name="TextEdit" type="TextEdit" parent="CreatorScreen/Menu/Details"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Username"

[node name="Body" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 360.0
offset_bottom = 190.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/Body"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "BODY"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/Body"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "SKINTONE"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/Body"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/Body"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="Hair" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 10.0
offset_top = 225.0
offset_right = 360.0
offset_bottom = 335.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/Hair"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "HAIR"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/Hair"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/Hair"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/Hair"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="eyeL" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 320.0
offset_top = 80.0
offset_right = 670.0
offset_bottom = 190.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/eyeL"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "LEFT EYE"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/eyeL"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/eyeL"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/eyeL"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="eyeR" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 320.0
offset_top = 225.0
offset_right = 670.0
offset_bottom = 335.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/eyeR"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "RIGHT EYE"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/eyeR"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/eyeR"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/eyeR"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="shirt" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 640.0
offset_top = 80.0
offset_right = 990.0
offset_bottom = 190.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/shirt"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "SHIRT"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/shirt"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/shirt"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/shirt"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="pants" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 640.0
offset_top = 225.0
offset_right = 990.0
offset_bottom = 335.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/pants"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "PANTS"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/pants"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/pants"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/pants"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="shoes" type="ColorRect" parent="CreatorScreen/Menu"]
layout_mode = 0
offset_left = 640.0
offset_top = -127.0
offset_right = 990.0
offset_bottom = -17.0
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="CreatorScreen/Menu/shoes"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "SHOES"

[node name="Label2" type="Label" parent="CreatorScreen/Menu/shoes"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 144.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "COLOR"

[node name="CollectionButton" type="Button" parent="CreatorScreen/Menu/shoes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -75.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ColorButton" type="Button" parent="CreatorScreen/Menu/shoes"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "--->"

[node name="ConfirmButton" type="Button" parent="CreatorScreen/Menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "CONFIRM"

[connection signal="text_changed" from="CreatorScreen/Menu/Details/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="CreatorScreen/Menu/Body/CollectionButton" to="CreatorScreen/Menu/Skeleton/body" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/Body/ColorButton" to="CreatorScreen/Menu/Skeleton/body" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/Hair/CollectionButton" to="CreatorScreen/Menu/Skeleton/hair" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/Hair/ColorButton" to="CreatorScreen/Menu/Skeleton/hair" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/eyeL/CollectionButton" to="CreatorScreen/Menu/Skeleton/eyeL" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/eyeL/ColorButton" to="CreatorScreen/Menu/Skeleton/eyeL" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/eyeR/CollectionButton" to="CreatorScreen/Menu/Skeleton/eyeR" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/eyeR/ColorButton" to="CreatorScreen/Menu/Skeleton/eyeR" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/shirt/CollectionButton" to="CreatorScreen/Menu/Skeleton/shirt" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/shirt/ColorButton" to="CreatorScreen/Menu/Skeleton/shirt" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/pants/CollectionButton" to="CreatorScreen/Menu/Skeleton/pants" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/pants/ColorButton" to="CreatorScreen/Menu/Skeleton/pants" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/shoes/CollectionButton" to="CreatorScreen/Menu/Skeleton/shoes" method="_on_collection_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/shoes/ColorButton" to="CreatorScreen/Menu/Skeleton/shoes" method="_on_color_button_pressed"]
[connection signal="pressed" from="CreatorScreen/Menu/ConfirmButton" to="." method="_on_confirm_button_pressed"]
